<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shared.AboutTheBookFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:titleEnabled="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/about_the_book_app_bar_menu"
                app:navigationContentDescription="@string/all_back_navigation_cd"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/about_the_book_app_bar_title"
                app:titleCentered="true" />

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:buttonGravity="bottom"
                android:navigationIcon="@drawable/ic_navigation_bookshelf_filled"
                android:padding="16dp"
                android:title="@string/about_the_book_group_label"
                android:titleTextAppearance="@style/TextAppearance.App.Toolbar.Label"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.975">
                <!--  android:visibility="gone">  -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_group"
                    android:layout_width="136.5dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_group"
                        android:layout_width="match_parent"
                        android:layout_height="56.5dp"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.App.BodyLarge" />
                </com.google.android.material.textfield.TextInputLayout>
            </Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>